--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/MyFlock-0.9.slnx/FileContentIndex/4a83014f-bb79-4854-9242-350c49fbbc85.vsidx
+/.vs/MyFlock-0.9/FileContentIndex/7ce221e6-1fdc-49c9-b9d1-156f2b73e764.vsidx
