--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 
 /.vs/MyFlock-0.9.slnx/FileContentIndex/4a83014f-bb79-4854-9242-350c49fbbc85.vsidx
 /.vs/MyFlock-0.9/FileContentIndex/7ce221e6-1fdc-49c9-b9d1-156f2b73e764.vsidx
+/.vs/MyFlock-0.9.slnx/FileContentIndex/106050d0-92df-4e7b-8397-55a41a9335bd.vsidx
+/.vs/MyFlock-0.9.slnx/FileContentIndex/147d8a6e-b04a-4894-8b90-075e04bef0ca.vsidx
+/.vs/MyFlock-0.9.slnx/FileContentIndex/6c6437cc-163c-431b-941c-d2c1db24a02b.vsidx
+/.vs/MyFlock-0.9.slnx/FileContentIndex/83d860c4-bec6-4431-a986-8ae8ef1c5b56.vsidx
