--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /.vs/MyFlock-0.9.slnx/FileContentIndex/147d8a6e-b04a-4894-8b90-075e04bef0ca.vsidx
 /.vs/MyFlock-0.9.slnx/FileContentIndex/6c6437cc-163c-431b-941c-d2c1db24a02b.vsidx
 /.vs/MyFlock-0.9.slnx/FileContentIndex/83d860c4-bec6-4431-a986-8ae8ef1c5b56.vsidx
+/.vs/MyFlock-0.9.slnx/FileContentIndex/b3826724-a844-4747-b32a-332bfbe493df.vsidx
