--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /.vs/MyFlock-0.9.slnx/FileContentIndex/6c6437cc-163c-431b-941c-d2c1db24a02b.vsidx
 /.vs/MyFlock-0.9.slnx/FileContentIndex/83d860c4-bec6-4431-a986-8ae8ef1c5b56.vsidx
 /.vs/MyFlock-0.9.slnx/FileContentIndex/b3826724-a844-4747-b32a-332bfbe493df.vsidx
+/.vs/MyFlock-0.9.slnx/FileContentIndex/135cebc9-47a6-4635-b2b4-2f6167f4d4eb.vsidx
+/.vs/MyFlock-0.9.slnx/FileContentIndex/12e5b99e-a2c9-4aa1-8f6d-6dbadd10ec6e.vsidx
